# SEPIIDA

./: .gitignore  CMakeLists.txt  EDIT_THIS_FILE.mac  MSISE00_atmosphere.csv  README.md  TEMP_generate_jupiter_atmosphere.jl  TEMP_jupiter_TP_profile_Knížek_2025.csv  atmosphere_profile.csv  atmosphericEPP_main.cc  crude_jupiter_atmosphere_profile.csv  generate_MSISE00_atmosphere.py  installation_and_running.txt  jupiter_atmosphere_profile.csv  libjupitermag.dylib  reader.jl  run_beam.mac
atmospheres/: generate_MSISE00_atmosphere.py  jupiter_gram.csv  mars_gram.csv  msis_earth.csv  near_vacuum.csv
batch_scripts/: AG4_proton_40071384.9keV.sh  AG4_proton_83915824.8keV.sh  SEPIIDA_GCR_muons_alpha_10313477.4keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_10313477.4keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_10313477.4keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_10313477.4keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_114502209.1keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_114502209.1keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_114502209.1keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_114502209.1keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_11560505.9keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_11560505.9keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_11560505.9keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_11560505.9keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_12911525.4keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_12911525.4keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_12911525.4keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_12911525.4keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_14376071.2keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_14376071.2keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_14376071.2keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_14376071.2keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_1467029.3keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_1467029.3keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_1467029.3keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_1467029.3keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_15963767.9keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_15963767.9keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_15963767.9keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_15963767.9keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_165984094.2keV_0.0001deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_165984094.2keV_0.0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_165984094.2keV_0.1deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_165984094.2keV_0deg_100000particles.sh  SEPIIDA_GCR_muons_alpha_17674457.6keV_0.0001deg_100000particles.sh  (+1568 more)
include/: ANSIColors.h  CustomMagneticField.hh  (+12 more)
(+25 files in other folders)
